--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -23,6 +23,16 @@ spring:
     openfeign:
       circuitbreaker:
         enabled: true
+    stream:
+     bindings:
+       sendCommunication-out-0:
+         destination: send-communication
+  rabbitmq:
+    host: "rabbitmq.local"
+    port: 5672
+    username: "guest"
+    password: "guest"
+    connection-timeout: 10s
 
 
 eureka:
