--- a/message/src/main/resources/application.yml
+++ b/message/src/main/resources/application.yml
@@ -7,3 +7,17 @@ spring:
   cloud:
     function:
       definition: "email|sms"
+    stream:
+      bindings:
+        emailsms-in-0:
+          destination: send-communication
+          group: ${spring.application.name}
+        emailsms-out-0:
+          destination: communication-sent
+
+  rabbitmq:
+    host: "rabbitmq.local"
+    port: 5672
+    username: "guest"
+    password: "guest"
+    connection-timeout: 10s
