--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: "accounts"
   profiles:
-    active: "prod"
+    active: "default"
   datasource:
     url: jdbc:mysql://micro-sql.local:3306/accountsdb
     username: root
@@ -13,6 +13,13 @@ spring:
   sql:
    init:
     mode: always
+  flyway:
+    url: jdbc:mysql://micro-sql.local:3306/accountsdb
+    user: root
+    password: root
+    enabled: true
+    locations: "classpath:db/migration"
+    baseline-on-migrate: true
 
   jpa:
     show-sql: true
@@ -23,8 +30,13 @@ spring:
     openfeign:
       circuitbreaker:
         enabled: true
+    function:
+      definition: updateCommunication
     stream:
      bindings:
+       updateCommunication-in-0:
+         destination: communication-sent
+         group: ${spring.application.name}
        sendCommunication-out-0:
          destination: send-communication
   rabbitmq:
